src/objects/NDA_Signatory__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CoreID__c</fullName>
        <label>CoreID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Legacy_VPID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy VPID</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region_Name__c</fullName>
        <description>Region Name for NDA</description>
        <label>Region Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_Name__c</fullName>
        <description>Motorola vice president</description>
        <label>VP Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>NDA Signatory</label>
    <listViews>
        <fullName>APAC_VPs</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>CoreID__c</columns>
        <columns>Email__c</columns>
        <columns>Region_Name__c</columns>
        <columns>Title__c</columns>
        <columns>VP_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region_Name__c</field>
            <operation>equals</operation>
            <value>Asia Pac - Chinese,Asia Pac - English</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>APAC VPs</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>VP_Name__c</columns>
        <columns>Title__c</columns>
        <columns>CoreID__c</columns>
        <columns>Active__c</columns>
        <columns>Region_Name__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>EMEA_VPs</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>CoreID__c</columns>
        <columns>Email__c</columns>
        <columns>Region_Name__c</columns>
        <columns>Title__c</columns>
        <columns>VP_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region_Name__c</field>
            <operation>equals</operation>
            <value>EMEA - English</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>EMEA VPs</label>
    </listViews>
    <listViews>
        <fullName>Latin_America_VPs</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>CoreID__c</columns>
        <columns>Email__c</columns>
        <columns>Region_Name__c</columns>
        <columns>Title__c</columns>
        <columns>VP_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region_Name__c</field>
            <operation>contains</operation>
            <value>Latin America - English &amp; Portuguese,Latin America - English &amp; Spanish</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Latin America VPs</label>
    </listViews>
    <listViews>
        <fullName>North_America_VPs</fullName>
        <columns>NAME</columns>
        <columns>CoreID__c</columns>
        <columns>Email__c</columns>
        <columns>Region_Name__c</columns>
        <columns>Title__c</columns>
        <columns>VP_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region_Name__c</field>
            <operation>equals</operation>
            <value>North America - English</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>North America VPs</label>
    </listViews>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NDA Signatories</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>